# kmonad

./: .dir-locals.el  .dockerignore  .envrc  .gitignore  .gitmodules  .hlint.yaml  CONTRIBUTING.md  Dispatch_bak.hs  Dockerfile  LICENSE  NOTES.org  README.md  changelog.md  default.nix  kmonad.cabal  kmonad.hs  kmonad.org  package.yaml  shell.nix  stack.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker.yml  haskell-ci.yml  hlint.yml  nix.yml
app/: Main.hs
bak_again/: Daemon.hs
bak_again/Daemon/: Dispatch.hs
bak_again/Daemon/Dispatch/: InjectPoint.hs  Sluice.hs
c_src/: Makefile  keyio.c  keyio_mac.c  keyio_mac.cpp  keyio_win.c  main.c
c_src/mac/: .gitignore  Makefile  common.hpp  device_properties.c  device_properties.h  dext.cpp  hid.c  hid.h  kext.cpp  keyevent.h  keyio_mac.c  keyio_mac.cpp  keyio_mac.hpp  list-keyboards.c  sink-iokit.c  sink-iokit.h  sink-kext.cpp  sink-kext.h  source-hidqueue.c  source-hidqueue.h
c_src/mac/tests/: Makefile  compare_device_properties.c
cfg/: README.md  default.dhall  initial.dhall  linux.dhall
cfg/default/: linux.dhall
cfg/locale/: aliases.dhall
cfg/locale/aliases/: gestures.dhall  keycodes.dhall
cfg/locale/gestures/: basic_enUS.dhall
cfg/locale/keycodes/: linux_enUS.dhall
ci/: Dockerfile.linux  Dockerfile.windows
doc/: atreus.kbd  concepts.md  configuration.md  example.kbd  faq.md  foo  hardware-macro-keys.md  installation.md  keycode_reference.org  module_structure.md  quick-reference.md  syntax_guide.md  test.kbd  test2.kbd  tutorial-defsrc.md
doc/new/: README.md  configuration.md
doc/new/contributing/: general_disclaimer.md  module_structure.md
elisp/: kbd-mode.el
example/: atreus.kbd  atreus_win.kbd  dvorak_sane_zxcv.kbd  laptop.kbd  lock_key_example.kbd  test.kbd
keymap/: testing.kbd  tutorial.kbd
keymap/template/: Apple_A1243_108_keys.kbd  apple.kbd  atreus.kbd  freestyle2.kbd  iso_100.kbd  iso_60.kbd  iso_tkl.kbd  razer_blackwidow_2014.kbd  thinkpad_T430_iso.kbd  thinkpad_x220_iso.kbd  type_matrix_2030.kbd  us_ansi_100.kbd  us_ansi_104.kbd  us_ansi_60.kbd  us_ansi_tkl.kbd
keymap/user/DanL4/: splitableJapaneseX230Keyboard.kbd
keymap/user/FearlessSpiff/: dell-xps-9310-iso-de-mechwild-mercutio.kbd  readme.md
keymap/user/IDeathByte/: tkl-ansi.kbd
keymap/user/Lucki/: logitech_g15_g11.kbd
keymap/user/MaxGyver83/: .XCompose  Neo-layout-in-KMonad.md  neo-de.kbd  neo.kbd  vou.kbd
keymap/user/Rougemoot/: README.md  applekeeb.kbd
keymap/user/adgai19/: README.md  workman-p.kbd  workman.kbd
keymap/user/david-janssen/: atreus.kbd  neo-test.kbd  testing.kbd  win-testing.kbd
keymap/user/gkbd/: README.md  fnrs.kbd  jnrf.kbd  jnsf.kbd
keymap/user/herschenglime/: README.md  autoshift.kbd
keymap/user/iTzHard/: README.MD  arrows.kbd
keymap/user/iaeerfung/: uciea-rz.kbd
keymap/user/joshskidmore/: dell-xps-9360.kbd  gpd-mpc.kbd  gpd-pocket-2-max.kbd  gpd-win2.kbd
keymap/user/lemonxah/: tartarusv2.kbd
keymap/user/lurk3r4sh/: nirvana-sm.kbd
keymap/user/salahdin-ahmed/: KMonad.kbd  README.md
keymap/user/slotThe/: x220-iso-us-colemak-dh-z.kbd
keymap/user/stevep99/: README.md  colemak-dh-extend-ansi.kbd  colemak-dh-extend-iso.kbd
keymap/user/zim0369/: kmonad.kbd
keymaps/users/david-janssen/: fallthrough_test.kbd
mess/: ClassyTest.hs
nix/: config.nix  default.nix  flake.nix  kmonad.nix  module-base.nix  my-nixpkgs.nix  nixos-module.nix  nixos-test.nix  pinned-nixpkgs.nix  release.nix  shell.nix  sources.json  static_compilation.nix
nix/static/: default.nix  stack.yaml
nix/static_compilation/: README.md  static-compilation.nix
src/: K.hs  KLisp.hs  KMonad.hs  KPrelude.hs  Main.hs  Prelude.hs  Sandbox.hs
src/Data/: CChan.hs  LayerStack.hs  MultiMap.hs  Sluice.hs
src/K/: App.hs  Gesture.hs  Initial.hs  Keyboard.hs  Layers.hs  Shell.hs
src/K/App/: Initial.hs
src/K/Gesture/: Initial.hs  Ops.hs
src/K/Initial/: Initial.hs  Parsing.hs  Util.hs
src/K/Keyboard/: Initial.hs  Locale.hs
src/K/Layers/: Initial.hs  KbdFile.hs  README.md
src/K/Shell/: Cfg.hs  Env.hs  Error.hs  Initial.hs  KeyIO.hs  Logging.hs
src/KLisp/: Joiner.hs  Parser.hs  PerOS.hs  Token.hs  Types.hs  Utility.hs
src/KMonad/: Action.hs  App.hs  Args.hs  Button.hs  Core.hs  Daemon.hs  Engine.hs  Event.hs  Future.hs  Gesture.hs  Init.hs  Keyboard.hs  Model.hs  Parsing.hs  Prelude.hs  Pullchain.hs  README.md  Runner.hs  Shelter.hs  Testing.hs  Types.hs  Util.hs  question.org
src/KMonad/Api/: App.hs  Args.hs  Encode.hs  EventTracker.hs  InputDispatch.hs  LayerStack.hs  LockManager.hs  README.md  Sluice.hs  SymbolEncoder.hs
src/KMonad/App/: BEnv.hs  Dispatch.hs  DispatchOld.hs  HookStore.hs  HookStoreOld.hs  Hooks.hs  InjectPoint.hs  Invocation.hs  KeyHandler.hs  KeyIO.hs  Keymap.hs  Logging.hs  Main.hs  Parser.hs  PressHandler.hs  Server.hs  Sluice.hs  Types.hs
src/KMonad/Args/: Cmd.hs  Joiner.hs  Parser.hs  TH.hs  Types.hs
src/KMonad/ArgsOLD/: Cmd.hs  Joiner.hs  Parser.hs  Types.hs
src/KMonad/Button/: Action.hs  Keymap.hs
src/KMonad/CLI/: Args.hs
src/KMonad/Components/: Dispatch.hs  InputDispatch.hs  KeyHandler.hs
src/KMonad/Core/: BracketIO.hs  Button.hs  Config.hs  Event.hs  KeyCode.hs  Keyboard.hs  MapStack.hs  Name.hs  Parser.hs  Pretty.hs  README.md  SpecialSymbol.hs  Switch.hs  Time.hs  Types.hs
src/KMonad/Daemon/: App.hs  Bloopy.hs  Callback.hs  Dispatch.hs  HookStore.hs  InjectPoint.hs  KeyHandler.hs  Sluice.hs  Types.hs
src/KMonad/Domain/: Action.hs  App.hs  Button.hs  Config.hs  Daemon.hs  Dispatch.hs  Effect.hs  Event.hs  KeyHandler.hs  KeyIO.hs  KeyMap.hs  Loop.hs  README.md  Script.hs  Types.hs
src/KMonad/Keyboard/: ComposeSeq.hs  IO.hs  Keycode.hs  Ops.hs  Types.hs
src/KMonad/KeyboardOLD/: IO.hs  (+3 more)
src_bak/: KMonad.hs
src_new_bak/KMonad/: Prelude.hs
startup/: kmonad  kmonad.service  kmonad@.service  run
static/: stack.yaml
template/: atreus.kbd  example.kbd  hhkb-basic-layout.kbd
test/: Prelude.hs
test/KMonad/: ButtonDocSpec.hs  ComposeSeqSpec.hs  GestureSpec.hs  KeycodeSpec.hs
tools/: generate-release-changelog.sh
tst/: DispatchSpec.hs
(+296 files in other folders)
